WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
131330
bmalloc: Fixed a leak in the per-thread cache
https://bugs.webkit.org/show_bug.cgi?id=131330
Summary
bmalloc: Fixed a leak in the per-thread cache
Geoffrey Garen
Reported
2014-04-07 17:19:25 PDT
bmalloc: Fixed a leak in the per-thread cache
Attachments
Patch
(1.42 KB, patch)
2014-04-07 17:20 PDT
,
Geoffrey Garen
kling
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2014-04-07 17:20:02 PDT
Created
attachment 228780
[details]
Patch
Andreas Kling
Comment 2
2014-04-07 17:22:57 PDT
Comment on
attachment 228780
[details]
Patch r=me
Geoffrey Garen
Comment 3
2014-04-07 17:24:00 PDT
Committed
r166898
: <
http://trac.webkit.org/changeset/166898
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug