bmalloc: Fixed a leak in the per-thread cache https://bugs.webkit.org/show_bug.cgi?id=131330

Reviewed by Andreas Kling.

Remember to deallocate our line caches upon thread exit.

* bmalloc/Deallocator.cpp:
(bmalloc::Deallocator::~Deallocator):


Canonical link: https://commits.webkit.org/149383@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166898 268f45cc-cd09-0410-ab3c-d52691b4dbfc